# AI-Agent-for-Disaster-Resource-and-Volunteer-Allocation

./: CHATGPT_DATASET_PROMPT.md  CLI_TESTING_GUIDE.md  CODEBASE_DOCUMENTATION.md  Disaster_Allocation_API.postman_collection.json  HOW_THE_AI_AGENTS_WORK.md  HOW_TO_TEST_ENDPOINTS.md  POSTMAN_API_DOCUMENTATION.md  PROJECT_EXPLANATION.md  QUICK_FIX.md  README.md  TODO.md  TROUBLESHOOTING.md  api_test.html  dashboard.py  dashboard_new.py  diagnose_server.py  disaster_scenarios.csv  fix_server.py  install_log.txt  kill_port_8000.bat  kill_port_8000.ps1  process_scenarios.py  pyproject.toml  requirements.txt  sample_data.csv  start_api_server.bat  start_api_server.ps1  test_endpoints.py  test_endpoints_cli.ps1  test_endpoints_cli.sh  test_server.py
AI-Agent-System/: REFACTORING_SUMMARY.md  example_worker_usage.py  invoke_test.json  main.py  start_server.bat  start_server.ps1  supervisor_log.jsonl
AI-Agent-System/api/: __init__.py  server.py
AI-Agent-System/communication/: models.py  protocol.py
AI-Agent-System/config/: agent_config.json  settings.yaml
AI-Agent-System/datasets/: disaster_scenarios.csv  disaster_scenarios.json
AI-Agent-System/optimization/: REFACTORING_NOTES.md  __init__.py  example_usage.py  volunteer_allocator.py
AI-Agent-System/shared/: utils.py
AI-Agent-System/tests/: benchmark.py  test_api_health.py  test_api_invoke.py  test_api_query.py  test_phase2.py  test_phase3.py  (+5 more)
data/: raw
docs/: architecture.md  model.md
notebooks/: exploration.ipynb
scripts/: run_server.sh  run_tests.sh
tests/: test_data.py  test_optimization.py  test_ui.py
(+24 files in other folders)
