[tool.poetry]
name = "ai-agent-disaster-allocation"
version = "0.1.0"
description = "An AI agent for disaster resource and volunteer allocation."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.0"
pulp = "^2.5.0"
streamlit = "^0.88.0"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.5b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"